If no ?src parameter is specified in the URL then page attempts to load locations from "default.txt". Also adds DisableCoordinates function, and contains minor refactoring.

--- a/index_local.html
+++ b/index_local.html
@@ -105,6 +105,12 @@ head.ready(
 				// the background colour so that screens taller than the background texture
 				// are still the right colour at the bottom.
 				$('body').css({ 'background-color': 'rgb(77,100,47)' });
+						
+				// =================
+				// If you wish to specify a src URL in this html file instead of as a ?src= parameter 
+				// added to the URL of this html file, then uncomment the SetDefaultSrc() line below:
+				// =================				
+				// SetDefaultSrc('http://domain.com/yourlocationsfile.txt');
 							
 				getSettingsAndMapLocations(
 					head.screen.width,
