More directory restructuring so I can split minecraftmap.js into multiple source files

--- a/www/index.html
+++ b/www/index.html
@@ -27,7 +27,7 @@ head.js(
    {jquery_touchpunch: "js/jquery.ui.touch-punch.min.js"},
    {csv:               "js/csv.min.js"},
    {jquery_mapz:       "js/jquery.mapz.min.js"},   
-   {minecraftmap:      "minecraftmap.min.js"}
+   {minecraftmap:      "js/minecraftmap.min.js"}
 );
 </script>
 
