--- a/www/index_local.html
+++ b/www/index_local.html
@@ -31,7 +31,7 @@ head.js(
    {jquery_touchpunch: "js/jquery.ui.touch-punch.min.js"},
    {csv:               "js/csv.js"},
    {jquery_mapz:       "js/jquery.mapz.js"},   
-   {minecraftmap:      "minecraftmap.js"}
+   {minecraftmap:      "js/minecraftmap.js"}
 );
 </script>
 
