Fixes bug where resource images could affect the pagesize Splits up minecraftmap.js into more manageable files adds changelog

--- a/www/index.html
+++ b/www/index.html
@@ -83,7 +83,7 @@ head.js(
 		 so that $(document).ready() isn't triggered before they are loaded. -->
 	create your own at <a href="http://buildwithblocks.info">buildWithBlocks.info</a>
 </div>
-<div class="resources" style="visibility: hidden;">
+<div class="resources" style="position: absolute; visibility: hidden;">
 	<img id="map-background" src="img/map64.png"/>
 	<img id="map-tileset" src="img/glyphs.png"/>
 </div>
