Adds information about the AMIDST Exporter app

--- a/instructions/index.html
+++ b/instructions/index.html
@@ -4,7 +4,7 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<meta name="description" content="Online shareable map where Minecraft players add locations manually - no access to server files required.">
+	<meta name="description" content="Online shareable map where Minecraft players can add locations manually - no access to server files required.">
 	<meta name="keywords" content="Minecraft,Map,Overworld,SMP,server,web,online,Nether,collaborative">
 	
     <link href='https://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
@@ -125,6 +125,9 @@
 		
 		<p><a href="https://googledrive.com/host/0B35KCzsTLKY1QTB6MEdoYkp2VGs/template.txt">A template location-list file.</a></p>
 		
+		<p>If you know the seed for the world you can <a href="exportfromseed.html">download an application</a> which creates the location-list file for you,
+		pre-filled with all the locations created by Minecraft (villages, temples, mushroom islands, etc). It also creates the ocean-maps for an upcoming 
+		feature of having oceans shown on your map parchment.</p>
 		
 		<p>The Location list file is a list of locations, one per line. Each line gives a location type and its Minecraft x and z coordinates. You can use F3 in Minecraft to get coordinates (<a href="#Tips_rei">or from Rei's Minimap</a>).</p>
 		
@@ -463,7 +466,7 @@ range = 6400</pre>
         </div>
 		</section>
 
-        <aside id="sidebar">			
+        <aside id="sidebarlow">			
 			<div class="contents">
 			
 				<h1>Quick navigation:</h1>
