--- a/instructions/index.html
+++ b/instructions/index.html
@@ -125,9 +125,7 @@
 		
 		<p><a href="https://googledrive.com/host/0B35KCzsTLKY1QTB6MEdoYkp2VGs/template.txt">A template location-list file.</a></p>
 		
-		<p>If you know the seed for the world you can <a href="exportfromseed.html">download an application</a> which creates the location-list file for you,
-		pre-filled with all the locations created by Minecraft (villages, temples, mushroom islands, etc). It also creates the ocean-maps for an upcoming 
-		feature of having oceans shown on your map parchment.</p>
+		<p>You can <a href="exportfromseed.html">automatically generate your location-list file</a> if you know the seed for the world.</p>
 		
 		<p>The Location list file is a list of locations, one per line. Each line gives a location type and its Minecraft x and z coordinates. You can use F3 in Minecraft to get coordinates (<a href="#Tips_rei">or from Rei's Minimap</a>).</p>
 		
