minor improvements to instructions

--- a/instructions/googledrive.html
+++ b/instructions/googledrive.html
@@ -96,7 +96,11 @@
 		<a style="font-size: 75%" href="https://googledrive.com/host/0B35KCzsTLKY1QTB6MEdoYkp2VGs/index.html?googlesrc=0B35KCzsTLKY1YkVMeWRBemtKdHM">https://googledrive.com/host/0B35KCzsTLKY1QTB6MEdoYkp2VGs/index.html?googlesrc=<span style="color:green;">0B35KCzsTLKY1YkVMeWRBemtKdHM</span></a>
 		</p>
 		
-
+		<h2>Troubleshooting</h2>
+		<p>If your unique code looks longer than the example above (e.g. 44 characters instead of about 28), and causes a "Failed to load locations from src" error, then you've probably created a Doc file instead of a .txt file.</p>
+		
+		<p>Doc files are in a format native to Google, like the Google equivalent of Microsoft Word .doc format. They're good for fonts and nice layout, but the map generator can't extract extract data from them. I may add support for Google doc files later &mdash; if it's possible without bloating the map viewer too much, since Google provides such a nice collaborative online UI for them.</p>
+		
 		<p><a href="index.html">&#8617; Return to main map-making instructions</a></p>
 		
 		</section>
