--- a/instructions/index.html
+++ b/instructions/index.html
@@ -24,7 +24,7 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Making your own Minecraft map</title>
+    <title>The Ink &amp; Parchment Map</title>
   </head>
 
   <body>
