--- a/instructions/exportfromseed.html
+++ b/instructions/exportfromseed.html
@@ -39,7 +39,7 @@
 
 		<p><a href="index.html">&#8617; Return to main map-making instructions</a></p>
 		
-		<p>I've modified a version of <a href="http://www.minecraftforum.net/forums/mapping-and-modding/minecraft-tools/1262200-v3-6-amidst-strongholds-village-biome-etc-finder">AMIDST</a> so
+		<p>I've modified a version of AMIDST so
 		it can export location files for any world you have the seed to. You can download the modified version from this page.</p>
 		
 		<p>A location file exported from the seed is pre-filled with all the locations that were created by Minecraft (e.g. villages, temples, mushroom islands, etc), and the application can 
