Added Ice plain spikes icon, and anvil icon

--- a/www/index.html
+++ b/www/index.html
@@ -81,7 +81,7 @@ head.js(
 <div class="credittext" style="position:absolute; bottom: 5px; right: 5px;">
 	<!-- Take advantage of this tiny text to include the fonts in the document 
 		 so that $(document).ready() isn't triggered before they are loaded. -->
-	create your own at <a href="http://buildwithblocks.info">buildWithBlocks.info</a>
+	<a href="http://buildwithblocks.info">create an Ink &amp; Parchment Map</a>	
 </div>
 <div class="resources" style="position: absolute; visibility: hidden;">
 	<img id="map-background" src="img/map64.png"/>
