googledrive file and directory ids normalised

--- a/instructions/index.html
+++ b/instructions/index.html
@@ -21,7 +21,7 @@
     <link rel="icon" sizes="16x16" type="image/png" href="images/favicon.png" />
 
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
-  <script type="text/javascript" src="js/animatedcollapse.js">
+  <script type="text/javascript" src="js/animatedcollapse.min.js">
     /***********************************************
     * Animated Collapsible DIV v2.4- (c) Dynamic Drive DHTML code library (www.dynamicdrive.com)
     * This notice MUST stay intact for legal use
@@ -475,7 +475,7 @@ range = 6400</pre>
       <p>Tip: Try to make the range a multiple of 32, as this results in the scale at the bottom-left of the map showing nice round numbers. (This is because there are 64
       blocks in the map background texture, and the scale is aligned to the texture to help make it easier to estimate distances)</p>
 
-      <p><a href="https://googledrive.com/host/0B35KCzsTLKY1QTB6MEdoYkp2VGs/index.html?googlesrc=0B35KCzsTLKY1YjJDV09RV0NDVHM&range=1600">Example - map with range set to 1600</a></p>
+      <p><a href="https://googledrive.com/host/0B35KCzsTLKY1QTB6MEdoYkp2VGs/index.html?googlesrc=0B35KCzsTLKY1YkVMeWRBemtKdHM&range=1600">Example - map with range set to 1600</a></p>
 
         </div>
         <a id="settings_title_heading" href="index_expanded.html#settings_title_heading" class="headerhref" rel="toggle[settings_title]">
@@ -516,7 +516,7 @@ range = 6400</pre>
 
       <p>Setting these values allows you to specify where the map will be centered. The map defaults to 0, 0.</p>
 
-      <p><a href="https://googledrive.com/host/0B35KCzsTLKY1QTB6MEdoYkp2VGs/index.html?googlesrc=0B35KCzsTLKY1YjJDV09RV0NDVHM&x=966&z=-1090">Example - map centered on the spawn point</a></p>
+      <p><a href="https://googledrive.com/host/0B35KCzsTLKY1QTB6MEdoYkp2VGs/index.html?googlesrc=0B35KCzsTLKY1YkVMeWRBemtKdHM&x=966&z=-1090">Example - map centered on the spawn point</a></p>
 
         </div>
         <a id="settings_icons_heading" href="index_expanded.html#settings_icons_heading" class="headerhref" rel="toggle[settings_icons]">
@@ -562,7 +562,7 @@ range = 6400</pre>
 
       <p>This can either be set to true or false. If set to false then the distance scale at the bottom-left of the map will not be drawn. The default value is true.</p>
 
-      <p><a href="https://googledrive.com/host/0B35KCzsTLKY1QTB6MEdoYkp2VGs/index.html?googlesrc=0B35KCzsTLKY1YjJDV09RV0NDVHM&showscale=false">Example - map with no distance scale</a></p>
+      <p><a href="https://googledrive.com/host/0B35KCzsTLKY1QTB6MEdoYkp2VGs/index.html?googlesrc=0B35KCzsTLKY1YkVMeWRBemtKdHM&showscale=false">Example - map with no distance scale</a></p>
 
         </div>
         <a id="settings_showcoords_heading" href="index_expanded.html#settings_showcoords_heading" class="headerhref" rel="toggle[settings_showcoords]">
@@ -587,7 +587,7 @@ range = 6400</pre>
 
       <p>This specifies the "zoom-level" that must be reached before labels are displayed. It defaults to 0, which means labels are always shown.</p>
 
-      <p><a href="https://googledrive.com/host/0B35KCzsTLKY1QTB6MEdoYkp2VGs/index.html?googlesrc=0B35KCzsTLKY1YjJDV09RV0NDVHM&hidelabelsabove=1">Example - map with labels disabled on the outermost zoom-level.</a></p>
+      <p><a href="https://googledrive.com/host/0B35KCzsTLKY1QTB6MEdoYkp2VGs/index.html?googlesrc=0B35KCzsTLKY1YkVMeWRBemtKdHM&hidelabelsabove=1">Example - map with labels disabled on the outermost zoom-level.</a></p>
 
         </div>
         <a id="settings_showlabels_heading" href="index_expanded.html#settings_showlabels_heading" class="headerhref" rel="toggle[settings_showlabels]">
@@ -601,7 +601,7 @@ range = 6400</pre>
       <p>This specifies the "zoom-level" at which all labels will be displayed, even if they overlap other labels or icons (labels are normally only displayed when then don't
       overlap other items in the map). It defaults to 3, which means that at the last zoom-level (3), all labels are shown.</p>
 
-      <p><a href="https://googledrive.com/host/0B35KCzsTLKY1QTB6MEdoYkp2VGs/index.html?googlesrc=0B35KCzsTLKY1YjJDV09RV0NDVHM&showlabelsbelow=0">Example - map with all labels shown at all zoom-levels.</a></p>
+      <p><a href="https://googledrive.com/host/0B35KCzsTLKY1QTB6MEdoYkp2VGs/index.html?googlesrc=0B35KCzsTLKY1YkVMeWRBemtKdHM&showlabelsbelow=0">Example - map with all labels shown at all zoom-levels.</a></p>
 
         </div>
 
