--- a/instructions/index.html
+++ b/instructions/index.html
@@ -705,13 +705,9 @@ range = 6400</pre>
     What'd be nice is a web-UI for people to enter their locations in with, but that would need a lot of hours, and it would mean everybody's maps
     depend on the server being maintained.
 
-    <div class="footer">
-      <div style="float: left"><a href="about.html">About/contact</a></div>
-      <div style="float: right"><a href="https://github.com/jasonlong/architect-theme">architect-theme</a> is maintained by <a href="https://github.com/jasonlong">jasonlong</a>.</div>
-        </div>
     </section>
 
-        <aside id="sidebarlow">
+    <aside id="sidebarlow">
       <div class="contents">
 
         <h1>Quick navigation:</h1>
@@ -761,10 +757,27 @@ range = 6400</pre>
         <p><a href="about.html">Contact</a></p>
 
       </div>
-        </aside>
+    </aside>
+
 
       </div>
     </div>
+
+    <div class="footer">
+      <div class="inner clearfix">
+
+        <table>
+          <tr>
+            <td><a href="about.html">About/contact</a></td>
+            <td><a href="https://github.com/jasonlong/architect-theme">architect-theme</a> is maintained by <a href="https://github.com/jasonlong">jasonlong</a>.</td>
+          </tr>
+          <tr>
+              <td><a href="index_expanded.html">Fully expanded version (no javascript)</a></td>
+          </tr>
+        </table>
+      </div>
+    </div>
+
 
   </body>
 </html>
