minor improvements to instructions

--- a/instructions/exportfromseed.html
+++ b/instructions/exportfromseed.html
@@ -51,7 +51,7 @@
 		
 		
 		<ul>
-		<li>800 MB of RAM - This is because it must generate a large area of the Minecraft map before exporting the locations.</li>
+		<li>800 MB of RAM - This is because it must generate a large area of the Minecraft map before exporting the locations or oceans.</li>
 		<li>A version of Minecraft installed on the computer. The AMIDST Exporter will list all the versions it can find on the computer, pick
 		the one the world was originally generated with, or something close.</li>
 		</ul>
@@ -83,17 +83,16 @@
 		<p>To launch in OS X, open a terminal window and type:</p>
 		<pre>java -Xmx1024M -jar AmidstExporter.jar</pre>
 				
-		<!--
 		<h2>Oceans preview</h2>
 		
 		<div style="float:right;">
-		<a href="images/ocean_preview_full.png">		
+		<a href="https://googledrive.com/host/0B35KCzsTLKY1WnBhVmh4R1JtMUk/index.html?src=example.txt&oceansrc=example-ocean.png&range=4800&showcoordinates=true">		
 			<img src="images/ocean_preview_small.png" width="400" height="288" alt="screenshot"/>
 			<br/>
 			<p style="text-align:center;">&ldquo;BlueCoastline&rdquo; theme</p>		
 		</a>
 		</div>
-		<p>A preview of one of several ocean themes that will be available for your map using exported ocean-maps from the modified version of Amidst, with the next release of the map viewer:</p>-->
+		<p>BlueCoastline is one of several ocean themes that become available for your map once an ocean-map has been exported using this modified version of Amidst:</p>
 				
 		<br style="clear:both;"/>
 		<p><a href="index.html">&#8617; Return to main map-making instructions</a></p>
