--- a/instructions/exportfromseed.html
+++ b/instructions/exportfromseed.html
@@ -44,8 +44,8 @@
 		
 		<p>A location file exported from the seed is pre-filled with all the locations that were created 
 		by Minecraft (e.g. villages, temples, mushroom islands, etc), and the application can 
-		also export ocean-maps, which means you'll be able to have the ocean shown on the parchment 
-		of the map once I release the next version of the map viewer (v1.7)</p>
+		also export ocean-maps, which means you can have the ocean drawn onto the parchment 
+		of the map.</p>
 			
 		<h2>Requirements</h2>
 		
